Stuck That's the point where I got stuck. I tried to restructure my code in ModalWindow, but the events do not even occur inside ModalWindowContent, and I can't even undertand. I used event.stopPopagation(), but my programm does not even see my ModalWindowContents that is inside ModalWindow component. I think I have to do this part with the teacher.

--- a/src/Components/CardStyle/Card.module.css
+++ b/src/Components/CardStyle/Card.module.css
@@ -3,7 +3,7 @@
 }
 
 .card {
-  padding: 2% 4% 1% 4%;
+  padding: 2% 4% 2% 4%;
   width: 100%;
   max-width: 768px;
   margin: 20px auto;
