--- a/src/Components/UserForm/UserForm.module.css
+++ b/src/Components/UserForm/UserForm.module.css
@@ -2,7 +2,7 @@
   width: auto;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  row-gap: 1vw;
 }
 
 .userform-username {
@@ -15,4 +15,8 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+}
+
+.userform input:focus {
+  outline: none;
 }
